--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "sandpack-vue3": "^2.0.3",
-    "vue": "^3.2.45"
+    "sandpack-vue3": "2.0.3",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.1",
-    "vue-tsc": "^1.0.13"
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1",
+    "vue-tsc": "^1.0.24"
   }
 }
